<resources>
    <string name="app_name">Student Tracker</string>
    <string name="muktangan_logo">Muktangan Logo</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="resend_verification_email">Resend Verification Email</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email_registration">Email Registration</string>
    <string name="student_tracker_dashboard">Student Tracker Dashboard</string>

    <string name="email">Email</string>
    <string name="cancel">CANCEL</string>
    <string name="confirm">CONFIRM</string>
    <string name="reset_password">Reset Password</string>
    <string name="sign_out">Sign out</string>
    <string name="account_settings">Account Settings</string>
    <string name="save">Save</string>
    <string name="change_password">Change Password</string>

    <string name="dialog_change_photo">ChangePhotoDialog</string>

    <!-- Firebase Database Nodes -->
    <string name="dbnode_users">users</string>

    <string name="field_email">email</string>
    <string name="field_name">name</string>
    <string name="field_phone">phone</string>
    <string name="field_profile_image">profile_image</string>
    <string name="field_user_id">user_id</string>

</resources>
